# password-strength-checker

./: LICENSE  README.md  pyproject.toml
passguard/: __init__.py  breach.py  cli.py  strength.py
tests/: test_passguard.py
